jaxify footstepnet wrapper

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "framesviewer>=1.0.2",
     "jax[cuda12]>=0.5.0",
     "jaxlib>=0.5.0",
+    "jaxonnxruntime>=0.3.0",
     "jaxtyping>=0.2.38",
     "matplotlib>=3.10.0",
     "mediapy>=1.2.2",
